--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "sass": "^1.94.2",
     "styled-components": "^5.3.6",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
